<resources>
    <string name="app_name">les_fifth_second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="your_score">Your score</string>
    <string name="comment">Comment</string>
    <string name="try_again">Try again</string>
</resources>