<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultFragment">

    <ImageView
        android:id="@+id/img_first"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/img_calculate" />

    <TextView
        android:id="@+id/tv_first"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/first_name"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_heart"
        android:layout_marginTop="12dp"
        android:src="@drawable/img_heart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_second"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/second_name"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_score"
        android:textSize="20sp"
        android:textColor="#B8194F"
        android:layout_gravity="center"
        android:text="@string/your_score"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_big_heart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        tools:ignore="MissingConstraints"
        android:src="@drawable/img_big_heart" />

    <TextView
        android:id="@+id/tv_result"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/comment"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="100"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    
    <Button
        android:id="@+id/btn"
        android:text="@string/try_again"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="80dp"/>
</LinearLayout>